Correction mobile menu

--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -7,6 +7,7 @@
   padding: 16px 20px;
   background-color: var(--color-primary-light);
   transform: translate(100%);
+  z-index: 3;
   transition-duration: 0.3s;
 
   &.is-open {
